--- a/public/index.html
+++ b/public/index.html
@@ -4,100 +4,125 @@
 <meta charset="UTF-8">
 <title>BINGO TV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 
 <style>
 body {
-  margin:0;
-  font-family:Arial,sans-serif;
-  background:radial-gradient(circle at top,#ffd000,#ff7a00);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  color:white;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: radial-gradient(circle at top, #ffd000, #ff7a00);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  color: white;
 }
-h1 { margin:10px; }
+
+h1 { margin: 10px 0; }
 
 #number {
-  width:260px;height:260px;
-  border-radius:50%;
-  background:white;
-  color:black;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:120px;
-  font-weight:bold;
-  box-shadow:0 0 30px rgba(0,0,0,.4);
-}
-.animate { animation:pop .6s ease; }
-@keyframes pop {
-  0%{transform:scale(0)}
-  70%{transform:scale(1.2)}
-  100%{transform:scale(1)}
+  width: 260px;
+  height: 260px;
+  border-radius: 50%;
+  background: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 120px;
+  font-weight: bold;
+  box-shadow: 0 0 30px rgba(0,0,0,0.4);
 }
 
-.controls { margin:15px; display:flex; gap:12px; }
-button {
-  padding:12px 20px;
-  font-size:16px;
-  border:none;
-  border-radius:10px;
-  background:#222;
-  color:white;
-  cursor:pointer;
+.animate {
+  animation: pop 0.6s ease;
 }
-button.reset { background:#b30000; }
-button.win { background:#0a8f3d; }
+
+@keyframes pop {
+  0% { transform: scale(0); }
+  70% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
+.controls {
+  margin: 20px 0;
+  display: flex;
+  gap: 15px;
+}
+
+button {
+  padding: 14px 26px;
+  font-size: 18px;
+  border: none;
+  border-radius: 12px;
+  background: #222;
+  color: white;
+  cursor: pointer;
+}
+
+button:disabled {
+  opacity: 0.5;
+}
 
 #drawn {
-  display:flex;
-  flex-wrap:wrap;
-  gap:8px;
-  justify-content:center;
-  max-width:1000px;
-}
-.drawn-number {
-  width:50px;height:50px;
-  border-radius:50%;
-  background:white;
-  color:black;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
+  margin-top: 20px;
+  width: 90%;
+  max-width: 900px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: center;
 }
 
-/* === ΚΟΥΠΟΝΙ GRID === */
-#ticket {
-  display:grid;
-  grid-template-columns:repeat(5, 1fr);
-  gap:12px;
-  margin:20px auto;
-  max-width:360px;
+.drawn-number {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: white;
+  color: black;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ticket-box {
+  margin-top: 30px;
+  background: rgba(0,0,0,0.2);
+  padding: 15px;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.ticket-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 8px;
+  margin-top: 10px;
 }
 
 .cell {
-  width:60px;height:60px;
-  border-radius:50%;
-  background:#eee;
-  color:black;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  cursor:pointer;
+  width: 52px;
+  height: 52px;
+  border-radius: 50%;
+  background: white;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  cursor: pointer;
 }
-.cell.marked { background:#ff5252;color:white; }
 
-input { padding:10px;font-size:16px;margin-top:10px;text-align:center }
-#qr { margin-top:10px }
+.cell.marked {
+  background: #ff4444;
+  color: white;
+}
 </style>
 </head>
 
 <body>
 
-<h1>BINGO HALL</h1>
+<h1>BINGO ΚΛΗΡΩΣΗ</h1>
 
 <div id="number">–</div>
 
@@ -105,121 +130,91 @@ input { padding:10px;font-size:16px;margin-top:10px;text-align:center }
   <button id="manualBtn">MANUAL</button>
   <button id="autoBtn">AUTO</button>
   <button id="stopBtn" disabled>STOP</button>
-  <button id="resetBtn" class="reset">RESET</button>
 </div>
 
 <div id="drawn"></div>
 
-<h3>Κουπόνι παίκτη</h3>
-<input id="name" placeholder="Όνομα">
-<button id="createTicketBtn">ΔΗΜΙΟΥΡΓΙΑ QR</button>
-<img id="qr" width="160">
+<div class="ticket-box">
+  <h3>Δημιουργία κουπονιού</h3>
+  <button id="createTicket">ΝΕΟ ΚΟΥΠΟΝΙ</button>
+  <div id="ticketId"></div>
+  <div class="ticket-grid" id="ticket"></div>
+</div>
 
 <script>
-const params = new URLSearchParams(location.search);
-const ticketParam = params.get("ticket");
+let interval = null;
+let running = false;
 
-/* ================== ΚΟΥΠΟΝΙ ================== */
-if(ticketParam){
-  const data = JSON.parse(atob(ticketParam));
-  const drawn = JSON.parse(localStorage.getItem("drawnNumbers")||"[]");
+const numberDiv = document.getElementById("number");
+const drawnDiv = document.getElementById("drawn");
+const manualBtn = document.getElementById("manualBtn");
+const autoBtn = document.getElementById("autoBtn");
+const stopBtn = document.getElementById("stopBtn");
+const ticketDiv = document.getElementById("ticket");
+const ticketIdDiv = document.getElementById("ticketId");
 
-  document.body.innerHTML = `
-    <h2>${data.name}</h2>
-    <p>🆔 Κουπόνι: <b>${data.id}</b></p>
-    <div id="ticket"></div>
-    <button class="win" id="checkWin">ΕΛΕΓΧΟΣ ΝΙΚΗΣ</button>
-    <p id="result"></p>
-  `;
+// ===== ΚΛΗΡΩΣΗ ΑΠΟ SERVER =====
+async function drawFromServer() {
+  const res = await fetch("/api/draw");
+  const data = await res.json();
+  if (data.done) {
+    alert("Τέλος αριθμών");
+    stopAuto();
+    return;
+  }
 
-  const ticket = document.getElementById("ticket");
-  data.nums.forEach(n=>{
-    const c=document.createElement("div");
-    c.className="cell";
-    c.textContent=n;
-    c.onclick=()=>c.classList.toggle("marked");
-    ticket.appendChild(c);
-  });
-
-  document.getElementById("checkWin").onclick=()=>{
-    const marked=[...document.querySelectorAll(".cell.marked")].map(c=>+c.textContent);
-    if(marked.length===0) return alert("Μαρκάρισε νούμερα");
-
-    const ok = marked.every(n=>drawn.includes(n));
-    document.getElementById("result").textContent =
-      ok ? `🎉 BINGO! Κουπόνι ${data.id}` : "❌ Δεν έχουν κληρωθεί όλα";
-  };
-  throw "";
-}
-
-/* ================== TV ΚΛΗΡΩΣΗ ================== */
-let numbers=[], drawn=[], interval=null, running=false;
-
-function initGame(){
-  numbers=Array.from({length:75},(_,i)=>i+1);
-  drawn=[];
-  document.getElementById("drawn").innerHTML="";
-  document.getElementById("number").textContent="–";
-  localStorage.setItem("drawnNumbers","[]");
-}
-
-function drawNumber(){
-  if(numbers.length===0){ stopAuto(); alert("Τέλος!"); return; }
-  const i=Math.floor(Math.random()*numbers.length);
-  const n=numbers.splice(i,1)[0];
-  drawn.push(n);
-  localStorage.setItem("drawnNumbers",JSON.stringify(drawn));
-
-  const numberDiv=document.getElementById("number");
-  numberDiv.textContent=n;
+  numberDiv.textContent = data.number;
   numberDiv.classList.remove("animate");
   void numberDiv.offsetWidth;
   numberDiv.classList.add("animate");
 
-  const d=document.createElement("div");
-  d.className="drawn-number";
-  d.textContent=n;
-  document.getElementById("drawn").appendChild(d);
+  drawnDiv.innerHTML = "";
+  data.drawnNumbers.forEach(n => {
+    const d = document.createElement("div");
+    d.className = "drawn-number";
+    d.textContent = n;
+    drawnDiv.appendChild(d);
+  });
 }
 
-manualBtn.onclick=()=>{ if(!running) drawNumber(); };
-autoBtn.onclick=()=>{
-  if(running) return;
-  running=true;
-  autoBtn.disabled=true;
-  manualBtn.disabled=true;
-  stopBtn.disabled=false;
-  drawNumber();
-  interval=setInterval(drawNumber,5000);
+manualBtn.onclick = () => {
+  if (!running) drawFromServer();
 };
-function stopAuto(){
-  running=false;
+
+autoBtn.onclick = () => {
+  if (running) return;
+  running = true;
+  autoBtn.disabled = true;
+  manualBtn.disabled = true;
+  stopBtn.disabled = false;
+  drawFromServer();
+  interval = setInterval(drawFromServer, 5000);
+};
+
+function stopAuto() {
+  running = false;
   clearInterval(interval);
-  autoBtn.disabled=false;
-  manualBtn.disabled=false;
-  stopBtn.disabled=true;
+  autoBtn.disabled = false;
+  manualBtn.disabled = false;
+  stopBtn.disabled = true;
 }
-stopBtn.onclick=stopAuto;
-resetBtn.onclick=()=>{ stopAuto(); initGame(); };
+stopBtn.onclick = stopAuto;
 
-initGame();
+// ===== ΚΟΥΠΟΝΙ ΠΑΙΚΤΗ =====
+document.getElementById("createTicket").onclick = async () => {
+  const res = await fetch("/api/ticket", { method: "POST" });
+  const data = await res.json();
 
-/* ================== QR ================== */
-createTicketBtn.onclick=async()=>{
-  const name=document.getElementById("name").value.trim();
-  if(!name) return alert("Βάλε όνομα");
+  ticketIdDiv.innerHTML = "<b>ID:</b> " + data.ticketId;
+  ticketDiv.innerHTML = "";
 
-  const ticketId="BINGO-"+Math.floor(100000+Math.random()*900000);
-
-  let nums=[];
-  while(nums.length<15){
-    let n=Math.floor(Math.random()*75)+1;
-    if(!nums.includes(n)) nums.push(n);
-  }
-
-  const data=btoa(JSON.stringify({id:ticketId,name,nums}));
-  const link=location.origin+location.pathname+"?ticket="+data;
-  qr.src=await QRCode.toDataURL(link);
+  data.numbers.forEach(n => {
+    const c = document.createElement("div");
+    c.className = "cell";
+    c.textContent = n;
+    c.onclick = () => c.classList.toggle("marked");
+    ticketDiv.appendChild(c);
+  });
 };
 </script>
 
