--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@ body {
 
 h1 { margin: 10px 0; }
 
+#winner {
+  font-size: 26px;
+  font-weight: bold;
+  color: #00ff6a;
+  margin: 10px 0;
+}
+
 #number {
   width: 260px;
   height: 260px;
@@ -33,10 +40,7 @@ h1 { margin: 10px 0; }
   box-shadow: 0 0 30px rgba(0,0,0,0.4);
 }
 
-.animate {
-  animation: pop 0.6s ease;
-}
-
+.animate { animation: pop 0.6s ease; }
 @keyframes pop {
   0% { transform: scale(0); }
   70% { transform: scale(1.2); }
@@ -59,9 +63,7 @@ button {
   cursor: pointer;
 }
 
-button:disabled {
-  opacity: 0.5;
-}
+button:disabled { opacity: 0.5; }
 
 #drawn {
   margin-top: 20px;
@@ -87,7 +89,7 @@ button:disabled {
 
 .ticket-box {
   margin-top: 30px;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.25);
   padding: 15px;
   border-radius: 12px;
   text-align: center;
@@ -117,12 +119,20 @@ button:disabled {
   background: #ff4444;
   color: white;
 }
+
+.bingo-btn {
+  margin-top: 15px;
+  background: #00c853;
+  color: black;
+  font-weight: bold;
+}
 </style>
 </head>
 
 <body>
 
 <h1>BINGO ΚΛΗΡΩΣΗ</h1>
+<div id="winner"></div>
 
 <div id="number">–</div>
 
@@ -135,15 +145,19 @@ button:disabled {
 <div id="drawn"></div>
 
 <div class="ticket-box">
-  <h3>Δημιουργία κουπονιού</h3>
+  <h3>Κουπόνι Παίκτη</h3>
   <button id="createTicket">ΝΕΟ ΚΟΥΠΟΝΙ</button>
   <div id="ticketId"></div>
+
   <div class="ticket-grid" id="ticket"></div>
+
+  <button class="bingo-btn" id="bingoBtn" disabled>🎉 BINGO!</button>
 </div>
 
 <script>
 let interval = null;
 let running = false;
+let currentTicketId = null;
 
 const numberDiv = document.getElementById("number");
 const drawnDiv = document.getElementById("drawn");
@@ -152,13 +166,14 @@ const autoBtn = document.getElementById("autoBtn");
 const stopBtn = document.getElementById("stopBtn");
 const ticketDiv = document.getElementById("ticket");
 const ticketIdDiv = document.getElementById("ticketId");
+const bingoBtn = document.getElementById("bingoBtn");
+const winnerDiv = document.getElementById("winner");
 
-// ===== ΚΛΗΡΩΣΗ ΑΠΟ SERVER =====
+// ===== ΚΛΗΡΩΣΗ =====
 async function drawFromServer() {
   const res = await fetch("/api/draw");
   const data = await res.json();
   if (data.done) {
-    alert("Τέλος αριθμών");
     stopAuto();
     return;
   }
@@ -177,9 +192,7 @@ async function drawFromServer() {
   });
 }
 
-manualBtn.onclick = () => {
-  if (!running) drawFromServer();
-};
+manualBtn.onclick = () => { if (!running) drawFromServer(); };
 
 autoBtn.onclick = () => {
   if (running) return;
@@ -200,13 +213,16 @@ function stopAuto() {
 }
 stopBtn.onclick = stopAuto;
 
-// ===== ΚΟΥΠΟΝΙ ΠΑΙΚΤΗ =====
+// ===== ΚΟΥΠΟΝΙ =====
 document.getElementById("createTicket").onclick = async () => {
   const res = await fetch("/api/ticket", { method: "POST" });
   const data = await res.json();
 
-  ticketIdDiv.innerHTML = "<b>ID:</b> " + data.ticketId;
+  currentTicketId = data.ticketId;
+  ticketIdDiv.innerHTML = "<b>ID:</b> " + currentTicketId;
   ticketDiv.innerHTML = "";
+  bingoBtn.disabled = false;
+  winnerDiv.textContent = "";
 
   data.numbers.forEach(n => {
     const c = document.createElement("div");
@@ -215,6 +231,31 @@ document.getElementById("createTicket").onclick = async () => {
     c.onclick = () => c.classList.toggle("marked");
     ticketDiv.appendChild(c);
   });
+};
+
+// ===== BINGO CHECK =====
+bingoBtn.onclick = async () => {
+  stopAuto();
+
+  const marked = [...document.querySelectorAll(".cell.marked")]
+    .map(c => Number(c.textContent));
+
+  const res = await fetch("/api/check", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      ticketId: currentTicketId,
+      marked
+    })
+  });
+
+  const data = await res.json();
+
+  if (data.win) {
+    winnerDiv.textContent = "🏆 ΝΙΚΗΤΗΣ ΚΟΥΠΟΝΙ: " + currentTicketId;
+  } else {
+    alert("❌ Δεν είναι Bingo ακόμα!");
+  }
 };
 </script>
 
