--- a/public/ticket.html
+++ b/public/ticket.html
@@ -1,58 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="el">
 <head>
 <meta charset="UTF-8">
-<title>Κουπόνι</title>
+<title>BINGO Ticket</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body {
-  background:#000;
-  color:white;
-  text-align:center;
-  font-family:Arial;
-}
-.grid {
-  display:grid;
-  grid-template-columns:repeat(5,1fr);
-  gap:10px;
-  margin:20px;
-}
-.cell {
-  width:60px;height:60px;
-  border-radius:50%;
-  background:white;
-  color:black;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:20px;
-  font-weight:bold;
-}
-.cell.marked {
-  background:red;
-  color:white;
-}
+body { font-family:Arial; display:flex; flex-direction:column; align-items:center; padding:20px; background:#fffae5;}
+h1 { margin-bottom:10px; text-align:center; }
+#ticketGrid { display:grid; grid-template-columns: repeat(5, 60px); gap:10px; margin-top:20px; }
+.cell { width:60px; height:60px; border-radius:50%; background:#fff; display:flex; align-items:center; justify-content:center; font-weight:bold; cursor:pointer; user-select:none; }
+.cell.marked { background:#4caf50; color:white; }
+#bingoBtn { margin-top:20px; padding:10px 20px; font-size:18px; border:none; border-radius:10px; background:#ff5252; color:white; cursor:pointer; }
+#result { margin-top:15px; font-size:20px; font-weight:bold; }
 </style>
 </head>
 <body>
-
-<h2>Το κουπόνι σου</h2>
-<div class="grid" id="grid"></div>
+<h1>Το Κουπόνι Σου</h1>
+<div id="ticketGrid"></div>
+<button id="bingoBtn">BINGO!</button>
+<div id="result"></div>
 
 <script>
-const id = new URLSearchParams(location.search).get("id");
+const params = new URLSearchParams(location.search);
+const ticketId = params.get("ticketId");
 
-fetch("/ticket/"+id)
-.then(r=>r.json())
-.then(nums=>{
-  nums.forEach(n=>{
-    const d=document.createElement("div");
-    d.className="cell";
-    d.innerText=n;
+if(!ticketId){
+  document.getElementById("ticketGrid").innerHTML="<p>Σκανάρετε QR για να πάρετε το κουπόνι.</p>";
+}
+
+async function loadTicket(){
+  const res = await fetch("/api/ticket?ticketId="+ticketId);
+  let data;
+  try{
+    data = await res.json();
+  }catch(e){
+    document.getElementById("ticketGrid").innerHTML="<p>Ανεπιτυχής φόρτωση κουπονιού.</p>"; 
+    return;
+  }
+
+  // Αν είναι νέο request, δημιουργούμε τυχαίο κουπόνι
+  if(!data.numbers){
+    const createRes = await fetch("/api/ticket", {
+      method:"POST",
+      headers:{"Content-Type":"application/json"},
+      body:JSON.stringify({})
+    });
+    data = await createRes.json();
+  }
+
+  const grid = document.getElementById("ticketGrid");
+  grid.innerHTML="";
+  data.numbers.forEach(n=>{
+    const d = document.createElement("div");
+    d.className="cell"; d.textContent=n;
     d.onclick=()=>d.classList.toggle("marked");
-    document.getElementById("grid").appendChild(d);
+    grid.appendChild(d);
   });
-});
-</script>
 
+  window.currentTicketId = data.ticketId;
+}
+
+loadTicket();
+
+// Κουμπί BINGO
+document.getElementById("bingoBtn").onclick = async ()=>{
+  const res = await fetch("/api/bingo", {
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body: JSON.stringify({ticketId:window.currentTicketId})
+  });
+  const data = await res.json();
+  const resultDiv = document.getElementById("result");
+  if(data.valid){
+    resultDiv.textContent="ΣΥΓΧΑΡΗΤΗΡΙΑ! ΚΕΡΔΙΣΑΤΕ!";
+    resultDiv.style.color="green";
+  }else{
+    resultDiv.textContent="Δεν έχετε ακόμα όλα τα νούμερα. Συνέχισε!";
+    resultDiv.style.color="red";
+  }
+};
+</script>
 </body>
 </html>
