--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,159 @@
 <html lang="el">
 <head>
 <meta charset="UTF-8">
-<title>BINGO TV</title>
+<title>BINGO HALL</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <style>
-body { font-family:Arial; display:flex; flex-direction:column; align-items:center; padding:20px; background: radial-gradient(circle at top, #ffd000, #ff7a00);}
-#number { width:200px; height:200px; border-radius:50%; background:white; font-size:120px; display:flex; align-items:center; justify-content:center; margin:10px; transition: transform 0.5s;}
-.drawn { display:flex; flex-wrap:wrap; gap:5px; max-width:500px;}
-.drawn div { width:40px; height:40px; border-radius:50%; background:white; display:flex; align-items:center; justify-content:center; font-weight:bold; }
+body { margin:0; font-family:Arial; background: radial-gradient(circle at top, #ffd000, #ff7a00); display:flex; flex-direction:column; align-items:center; padding:20px;}
+h1 { margin-bottom:10px; }
+#number { width:260px; height:260px; border-radius:50%; background:white; display:flex; align-items:center; justify-content:center; font-size:120px; font-weight:bold; color:#000; margin-bottom:20px; box-shadow:0 0 30px rgba(0,0,0,0.3); transition: transform 0.6s;}
 .animate { transform: scale(1.5); }
-#winner { margin-top:20px; font-size:24px; color:#ff0000; }
+.controls { display:flex; gap:15px; margin-bottom:20px; }
+button { padding:12px 20px; font-size:16px; border:none; border-radius:10px; background:#222; color:white; cursor:pointer; }
+button:disabled { opacity:0.5; }
+#drawn { display:flex; flex-wrap:wrap; gap:8px; max-width:1000px; justify-content:center; margin-bottom:20px; }
+.drawn-number { width:50px; height:50px; border-radius:50%; background:white; border:2px solid #222; display:flex; align-items:center; justify-content:center; font-weight:bold; color:#000; }
+#ticketSection { margin-top:20px; background:#fff3e0; padding:15px; border-radius:12px; width:100%; max-width:600px; text-align:center; }
+#ticketGrid { display:grid; grid-template-columns:repeat(5,60px); gap:10px; justify-content:center; margin:10px auto; }
+.cell { width:60px; height:60px; border-radius:50%; background:#eee; display:flex; align-items:center; justify-content:center; font-weight:bold; cursor:pointer; user-select:none; }
+.cell.marked { background:#4caf50; color:white; }
+#bingoBtn { margin-top:10px; padding:10px 20px; font-size:18px; border:none; border-radius:10px; background:#ff5252; color:white; cursor:pointer; }
+#qr { margin-top:10px; }
+#result { margin-top:10px; font-size:18px; font-weight:bold; }
+input { padding:10px; font-size:16px; width:200px; text-align:center; margin-bottom:10px; }
 </style>
 </head>
 <body>
-<h1>BINGO TV</h1>
+
+<h1>BINGO HALL</h1>
 <div id="number">–</div>
-<div class="drawn" id="drawn"></div>
-<div id="winner"></div>
+
+<div class="controls">
+  <button id="manualBtn">MANUAL</button>
+  <button id="autoBtn">AUTO</button>
+  <button id="stopBtn" disabled>STOP</button>
+  <button id="resetBtn">RESET</button>
+</div>
+
+<div id="drawn"></div>
+
+<!-- Δημιουργία κουπονιού -->
+<div id="ticketSection">
+  <h3>Δημιουργία κουπονιού</h3>
+  <input id="name" placeholder="Όνομα παίκτη">
+  <button id="createTicketBtn">ΔΗΜΙΟΥΡΓΙΑ ΚΟΥΠΟΝΙΟΥ</button><br>
+  <div id="ticketGrid"></div>
+  <button id="bingoBtn">BINGO!</button>
+  <div id="qr"></div>
+  <div id="result"></div>
+</div>
 
 <script>
-let lastNumber = null;
-async function fetchDrawn(){
+let drawnNumbers = [];
+let interval = null;
+let running = false;
+let currentTicket = null;
+
+const numberDiv = document.getElementById("number");
+const drawnDiv = document.getElementById("drawn");
+const manualBtn = document.getElementById("manualBtn");
+const autoBtn = document.getElementById("autoBtn");
+const stopBtn = document.getElementById("stopBtn");
+const resetBtn = document.getElementById("resetBtn");
+
+// ===== ΚΛΗΡΩΣΗ =====
+async function drawNumber(){
   const res = await fetch("/api/draw");
   const data = await res.json();
-  const drawnDiv = document.getElementById("drawn");
-  drawnDiv.innerHTML="";
-  data.drawnNumbers.forEach(n=>{
-    const d = document.createElement("div"); d.textContent=n; drawnDiv.appendChild(d);
-    lastNumber = n;
-  });
-  const numberDiv = document.getElementById("number");
-  if(lastNumber){
-    numberDiv.textContent = lastNumber;
+  drawnNumbers = data.drawnNumbers;
+  if(drawnNumbers.length>0){
+    const n = drawnNumbers[drawnNumbers.length-1];
+    numberDiv.textContent = n;
     numberDiv.classList.add("animate");
     setTimeout(()=>numberDiv.classList.remove("animate"),600);
   }
+
+  drawnDiv.innerHTML="";
+  drawnNumbers.forEach(n=>{
+    const el = document.createElement("div");
+    el.className="drawn-number"; el.textContent=n;
+    drawnDiv.appendChild(el);
+  });
 }
-setInterval(fetchDrawn,1000);
+
+manualBtn.onclick = async ()=>{
+  if(running) return;
+  await fetch("/api/auto"); // draw once
+  drawNumber();
+};
+
+autoBtn.onclick = async ()=>{
+  if(running) return;
+  running=true;
+  autoBtn.disabled=true; manualBtn.disabled=true; stopBtn.disabled=false;
+  await fetch("/api/auto",{method:"POST"});
+  interval = setInterval(drawNumber,1000);
+};
+
+stopBtn.onclick = async ()=>{
+  running=false;
+  autoBtn.disabled=false; manualBtn.disabled=false; stopBtn.disabled=true;
+  await fetch("/api/stop",{method:"POST"});
+  clearInterval(interval);
+  interval=null;
+};
+
+resetBtn.onclick = async ()=>{
+  running=false; autoBtn.disabled=false; manualBtn.disabled=false; stopBtn.disabled=true;
+  drawnNumbers=[]; drawnDiv.innerHTML=""; numberDiv.textContent="–";
+  document.getElementById("ticketGrid").innerHTML=""; document.getElementById("result").textContent="";
+  await fetch("/api/reset",{method:"POST"});
+  clearInterval(interval); interval=null;
+};
+
+// ===== ΚΟΥΠΟΝΙ =====
+const ticketGrid = document.getElementById("ticketGrid");
+const bingoBtn = document.getElementById("bingoBtn");
+const qrDiv = document.getElementById("qr");
+const resultDiv = document.getElementById("result");
+const nameInput = document.getElementById("name");
+
+document.getElementById("createTicketBtn").onclick = async ()=>{
+  const name = nameInput.value.trim()||"Παίκτης";
+  const res = await fetch("/api/ticket",{method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({name})});
+  const data = await res.json();
+  currentTicket = data;
+  ticketGrid.innerHTML="";
+  data.numbers.forEach(n=>{
+    const d = document.createElement("div");
+    d.className="cell"; d.textContent=n;
+    d.onclick = ()=>d.classList.toggle("marked");
+    ticketGrid.appendChild(d);
+  });
+  qrDiv.innerHTML="";
+  QRCode.toCanvas(qrDiv, location.origin+"/ticket.html?ticketId="+data.ticketId);
+  resultDiv.textContent="";
+};
+
+// ===== BINGO =====
+bingoBtn.onclick = async ()=>{
+  if(!currentTicket) return alert("Δημιούργησε πρώτα κουπόνι");
+  const res = await fetch("/api/bingo",{method:"POST", headers:{"Content-Type":"application/json"}, body:JSON.stringify({ticketId:currentTicket.ticketId})});
+  const data = await res.json();
+  if(data.valid){
+    resultDiv.textContent = `ΣΥΓΧΑΡΗΤΗΡΙΑ! ΚΕΡΔΙΣΕ Ο ${data.name}!`;
+    resultDiv.style.color="green";
+    await fetch("/api/stop",{method:"POST"});
+    running=false;
+    autoBtn.disabled=false; manualBtn.disabled=false; stopBtn.disabled=true;
+    clearInterval(interval); interval=null;
+  }else{
+    resultDiv.textContent = "Δεν έχετε ακόμα όλα τα νούμερα. Συνέχισε!";
+    resultDiv.style.color="red";
+  }
+};
 </script>
+
 </body>
 </html>
