--- a/public/ticket.html
+++ b/public/ticket.html
@@ -2,69 +2,58 @@
 <html lang="el">
 <head>
 <meta charset="UTF-8">
-<title>BINGO Κουπόνι</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width">
+<title>BINGO TICKET</title>
+
 <style>
-body { margin:0; font-family:Arial; display:flex; flex-direction:column; align-items:center; background:#fff3e0; padding:20px; }
-h1 { margin-bottom:15px; text-align:center; }
-#ticket { display:grid; grid-template-columns: repeat(5,1fr); gap:10px; margin-bottom:20px; }
-.cell { width:60px; height:60px; border-radius:50%; background:#eee; display:flex; justify-content:center; align-items:center; font-size:20px; font-weight:bold; cursor:pointer; }
-.cell.marked { background:#ff5252; color:white; }
-button { padding:10px 20px; font-size:16px; border:none; border-radius:10px; background:#222; color:white; cursor:pointer; }
+body{text-align:center;font-family:Arial}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(5,1fr);
+  gap:10px;
+  max-width:300px;
+  margin:20px auto;
+}
+.cell{
+  width:55px;height:55px;
+  border-radius:50%;
+  background:#eee;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:bold;
+}
+.marked{background:#ff5252;color:white}
+button{padding:15px 25px;font-size:18px}
 </style>
 </head>
+
 <body>
 
-<h1>Το Κουπόνι Σου</h1>
-<div id="ticket"></div>
-<button id="bingoBtn">BINGO!</button>
-<div id="result" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
+<h2 id="name"></h2>
+<div class="grid" id="grid"></div>
+<button onclick="bingo()">BINGO</button>
 
 <script>
-// Παίρνουμε το ticketId από το URL
-const params = new URLSearchParams(location.search);
-const ticketId = params.get("ticketId");
-if(!ticketId){ alert("Λανθασμένο κουπόνι!"); throw "No ticketId"; }
+const id=new URLSearchParams(location.search).get("ticketId");
 
-const ticketDiv = document.getElementById("ticket");
-const resultDiv = document.getElementById("result");
-let ticketNumbers = [];
-
-// Φόρτωση κουπονιού από server
-async function loadTicket() {
-  const res = await fetch("/api/getTicket?ticketId="+ticketId);
-  if(res.status!==200){ alert("Το κουπόνι δεν βρέθηκε"); return; }
-  const data = await res.json();
-  ticketNumbers = data.numbers;
-
-  ticketNumbers.forEach(n=>{
-    const div = document.createElement("div");
-    div.className="cell";
-    div.textContent=n;
-    div.onclick = ()=>div.classList.toggle("marked");
-    ticketDiv.appendChild(div);
+fetch("/api/ticket/"+id).then(r=>r.json()).then(t=>{
+  document.getElementById("name").innerText=t.name;
+  const g=document.getElementById("grid");
+  t.nums.forEach(n=>{
+    const d=document.createElement("div");
+    d.className="cell";
+    d.innerText=n;
+    d.onclick=()=>d.classList.toggle("marked");
+    g.appendChild(d);
   });
+});
+
+function bingo(){
+  fetch("/api/bingo/"+id,{method:"POST"});
+  alert("BINGO! 🎉");
 }
-
-loadTicket();
-
-// Έλεγχος BINGO
-document.getElementById("bingoBtn").onclick = async ()=>{
-  const marked = Array.from(document.querySelectorAll(".cell.marked")).map(c=>parseInt(c.textContent));
-  const res = await fetch("/api/checkBingo",{
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body: JSON.stringify({ticketId, marked})
-  });
-  const data = await res.json();
-  if(data.winner){
-    resultDiv.textContent = `Συγχαρητήρια! Κερδίσατε!`;
-    alert("Κερδισμένο κουπόνι! Η κλήρωση σταματάει!");
-    await fetch("/api/stop",{method:"POST"});
-  } else {
-    resultDiv.textContent = "Δεν είναι BINGO ακόμα.";
-  }
-};
 </script>
+
 </body>
 </html>
