--- a/public/ticket.html
+++ b/public/ticket.html
@@ -2,57 +2,136 @@
 <html lang="el">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<title>BINGO TICKET</title>
+<title>BINGO Κουπόνι</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body{text-align:center;font-family:Arial}
-.grid{
-  display:grid;
-  grid-template-columns:repeat(5,1fr);
-  gap:10px;
-  max-width:300px;
-  margin:20px auto;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #fff3e0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
 }
-.cell{
-  width:55px;height:55px;
-  border-radius:50%;
-  background:#eee;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
+
+h1 { margin-bottom: 5px; }
+#ticketId {
+  font-size: 14px;
+  margin-bottom: 15px;
+  color: #555;
 }
-.marked{background:#ff5252;color:white}
-button{padding:15px 25px;font-size:18px}
+
+#ticket {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.cell {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.cell.marked {
+  background: #ff5252;
+  color: white;
+}
+
+button {
+  padding: 12px 24px;
+  font-size: 18px;
+  border: none;
+  border-radius: 12px;
+  background: #222;
+  color: white;
+  cursor: pointer;
+}
+
+#result {
+  margin-top: 15px;
+  font-size: 18px;
+  font-weight: bold;
+}
 </style>
 </head>
 
 <body>
 
-<h2 id="name"></h2>
-<div class="grid" id="grid"></div>
-<button onclick="bingo()">BINGO</button>
+<h1>Κουπόνι Bingo</h1>
+<div id="ticketId"></div>
+
+<div id="ticket"></div>
+
+<button id="bingoBtn">🎉 BINGO 🎉</button>
+
+<div id="result"></div>
 
 <script>
-const id=new URLSearchParams(location.search).get("ticketId");
+const params = new URLSearchParams(location.search);
+const ticketId = params.get("ticketId");
 
-fetch("/api/ticket/"+id).then(r=>r.json()).then(t=>{
-  document.getElementById("name").innerText=t.name;
-  const g=document.getElementById("grid");
-  t.nums.forEach(n=>{
-    const d=document.createElement("div");
-    d.className="cell";
-    d.innerText=n;
-    d.onclick=()=>d.classList.toggle("marked");
-    g.appendChild(d);
-  });
-});
-
-function bingo(){
-  fetch("/api/bingo/"+id,{method:"POST"});
-  alert("BINGO! 🎉");
+if (!ticketId) {
+  alert("Μη έγκυρο κουπόνι");
+  throw "No ticketId";
 }
+
+document.getElementById("ticketId").innerText = "ID Κουπονιού: " + ticketId;
+
+let ticketNumbers = [];
+
+async function loadTicket() {
+  const res = await fetch("/api/ticket/" + ticketId);
+  if (!res.ok) {
+    alert("Το κουπόνι δεν βρέθηκε");
+    return;
+  }
+
+  const data = await res.json();
+  ticketNumbers = data.nums;
+
+  const ticketDiv = document.getElementById("ticket");
+  ticketDiv.innerHTML = "";
+
+  ticketNumbers.forEach(n => {
+    const d = document.createElement("div");
+    d.className = "cell";
+    d.textContent = n;
+    d.onclick = () => d.classList.toggle("marked");
+    ticketDiv.appendChild(d);
+  });
+}
+
+loadTicket();
+
+document.getElementById("bingoBtn").onclick = async () => {
+  const marked = [...document.querySelectorAll(".cell.marked")]
+    .map(el => parseInt(el.textContent));
+
+  const res = await fetch("/api/bingo/" + ticketId, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ marked })
+  });
+
+  const data = await res.json();
+
+  if (data.winner) {
+    document.getElementById("result").innerText = "🏆 ΚΕΡΔΙΣΕΣ!";
+  } else {
+    document.getElementById("result").innerText = "❌ Δεν είναι ακόμα BINGO";
+  }
+};
 </script>
 
 </body>
